--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -4,23 +4,69 @@
     <div class="col-md-4 col-md-offset-4 text-center form_text">
       <center><h3>Forgot your password?</h3> </center>
       <hr>
-			<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-			  <%= devise_error_messages! %>
+			<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post },class:"loginForm") do |f| %>
+			  <p style="background-color: red !important;"><center><%= devise_error_messages! %></center></p>
 
 			  <div class="field">
-			    <%#= f.label :email %><br />
-			    <%= f.email_field :email, autofocus: true, class:"form-control", placeholder:"Email id" %>
+			    <div class="input-group" data-validate="email">
+			    <%= f.email_field :email, autofocus: true, class: "form-control", id:"validate-email", placeholder:"Email id", required: true %>
+			    <span class="input-group-addon danger"><span class="glyphicon glyphicon-remove"></span></span>
+			    </div>
 			  </div>
 
 			  <div class="actions"><br/>
-			    <%= f.submit "Send me reset password instructions", class: "btn btn-danger btn-md" %>
+			    <%= f.submit "Send me reset password instructions",id: "submit", class: "btn btn-danger btn-md", disabled: true %>
 			  </div>
 			  <div class="col-md-12"><br>
 			  	<%= link_to "Register",new_user_registration_path, class: "btn btn-primary btn-md btn-160"%>
-          <%= link_to "Login",new_user_session_path, class: "btn btn-primary btn-md btn-160"%>
+               <%= link_to "Login",new_user_session_path, class: "btn btn-primary btn-md btn-160"%>
 			  </div><br><br><br>
 			<% end %>
-	<%#= render "devise/shared/links" %>
 		</div>
 	</div>
 </div>
+
+<script type="text/javascript">
+	$("#submit").click(function(){
+	 $('#error_explanation').css('background-color','red');	
+	});
+</script>
+<script type="text/javascript">
+
+  $(document).ready(function() {
+    $('.input-group input[required], .input-group textarea[required], .input-group select[required]').on('keyup change', function() {
+    var $form = $(this).closest('form'),
+      $group = $(this).closest('.input-group'),
+      $addon = $group.find('.input-group-addon'),
+      $icon = $addon.find('span'),
+      state = false;
+      if (!$group.data('validate')) {
+      state = $(this).val() ? true : false;
+    }else if ($group.data('validate') == "email") {
+      state = /^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/.test($(this).val())
+    }
+    if (state) {
+        $addon.removeClass('danger');
+        $addon.addClass('success');
+        $icon.attr('class', 'glyphicon glyphicon-ok');
+    }else{
+        $addon.removeClass('success');
+        $addon.addClass('danger');
+        $icon.attr('class', 'glyphicon glyphicon-remove');
+    }
+        if ($form.find('.input-group-addon.danger').length == 0) {
+            $form.find('[type="submit"]').prop('disabled', false);
+        }else{
+            $form.find('[type="submit"]').prop('disabled', true);
+        }
+  });
+    $('.input-group input[required], .input-group textarea[required], .input-group select[required]').trigger('change'); 
+});
+</script>
+<style type="text/css">
+	ul {
+  list-style-type: none;
+  background-color:red !important;
+  color:white;
+}
+</style>
