--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,31 +4,48 @@
       <center><h3>Changes Your Password</h3> </center>
       <hr>
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-        <%= devise_error_messages! %>
+        <%#= devise_error_messages! %>
 
         <div class="field">
          <br />
-          <%= f.password_field :password, autocomplete: "off", class:"form-control", placeholder:"Old password" %>
+          <%= f.password_field :current_password, autocomplete: "off", class:"form-control", placeholder:"Old password" %>
         </div>
         
           <div class="field">
           <br />
-          <%= f.password_field :password_confirmation, autocomplete: "off", class:"form-control", placeholder:"New password" %>
+          <%= f.password_field :password, autocomplete: "off", id: "paw", class:"form-control", placeholder:"New password" %>
         </div>
 
           <div class="field">
           <br />
-          <%= f.password_field :current_password, autocomplete: "off", class:"form-control", placeholder:"Confirm password" %>
+          <%= f.password_field :password_confirmation, autocomplete: "off", id:"pawc", class:"form-control password", placeholder:"Confirm password" %>
         </div>
 
         <div class="actions"><br/>
-          <%= f.submit "Update", class: "btn btn-danger btn-sm-12" %>
+          <%= f.submit "Update", class: "btn btn-danger btn-sm-12", disabled: true %>
         </div>
         <br>
       <% end %>
     </div>
   </div>
 </div>
+
+
+<script type="text/javascript">
+ $(document).ready(function() {
+ $("#pawc").on('focusout',function(){
+ if ($("#paw").val() == $("#pawc").val())
+ {
+  alert("Password Matched Successfully");
+  $('[type="submit"]').prop('disabled', false);
+ }
+ else
+ {
+  alert("Password not matched");
+ }
+  });
+ });
+ </script>
 
 <!-- <h2>Edit <%#= resource_name.to_s.humanize %></h2> -->
 <%#= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
